# sweetviz-v2

./: .pre-commit-config.yaml  MODERNIZATION_SUMMARY.md  PHASE_COMPLETION_SUMMARY.md  README.md  demo_ai_features.py  pyproject.toml
.github/workflows/: ci.yml
examples/: modernization_demo.py  phase4_demo.py  phase5_demo.py
sweetviz/: __init__.py  ai_insights.py  comet_ml_logger.py  config.py  dataframe_report.py  enhanced_export.py  enhanced_viz.py  feature_config.py  from_dython.py  from_profiling_pandas.py  graph.py  graph_associations.py  graph_cat.py  graph_legend.py  graph_numeric.py  mlops_integrations.py  modern_config.py  nl_query.py  series_analyzer.py  series_analyzer_cat.py  series_analyzer_numeric.py  series_analyzer_text.py  sv_html.py  sv_html_formatters.py  sv_public.py  sv_types.py  sweetviz_defaults.ini  type_detection.py
sweetviz/templates/: enhanced_themes.css
tests/: __init__.py  test_ai_features.py  test_ai_insights.py  test_ai_integration.py  test_basic.py  test_basic_functionality.py  test_phase4_features.py  test_phase5_features.py
