[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sweetviz"]

[project]
name = "sweetviz"
version = "2.3.1"
authors = [
  { name = "Francois Bertrand", email = "fb@fbdesignpro.com" },
]
description = "A pandas-based library to visualize and compare datasets."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=[
    "pandas",
    "data-science",
    "data-analysis",
    "python",
    "eda",
]
dependencies = [
    'pandas>=2.2.0',
    'numpy>=1.20.0',
    'matplotlib>=3.5.0',
    'tqdm>=4.60.0',
    'scipy>=1.8.0',
    'jinja2>=3.0.0',
    'importlib_resources>=5.0.0',
    'importlib_metadata;python_version<"3.8"',
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "black >=24.0.0",
  "isort >=5.13.0",
  "flake8 >=7.0.0",
  "mypy >=1.8.0",
  "pre-commit >=3.0.0",
]
ai = [
  "openai >=1.0.0",
  "transformers >=4.30.0",
  "torch >=2.0.0",
  "huggingface-hub >=0.16.0",
]
enhanced = [
  "plotly >=5.15.0",
  "kaleido >=0.2.1",
  "weasyprint >=55.0",
]
mlops = [
  "mlflow >=2.5.0",
  "wandb >=0.15.0",
]
docs = [
  "sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx_book_theme>=0.1.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo",
]

[project.urls]
Homepage = "https://github.com/fbdesignpro/sweetviz"
"Bug Tracker" = "https://github.com/fbdesignpro/sweetviz/issues"
Discussions = "https://github.com/fbdesignpro/sweetviz/discussions"
Changelog = "https://github.com/fbdesignpro/sweetviz/releases"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=sweetviz --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
